# rasterizer

./: .gitignore  CMakeLists.txt  Design.org  README.md
include/: buffer.h  engine.h  img.h  material.h  mesh.h  projector.h  scene.h
src/: color_buffer.cpp  engine.cpp  image_buffer.cpp  img.cpp  light.cpp  quad.cpp  sphere.cpp
